--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
 	}
 
 </style>
+
+<ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="/gpuinfolmfao/amd.html">things about amd ig</a></li>
+</ul>
+
+<br>
+
 <marquee style="color: #000;"direction="left" speed="20" height="30" width="1000" bgcolor="white">i know where you live</marquee>
 
 <br>
