--- a/index.html
+++ b/index.html
@@ -32,7 +32,14 @@
 		color: #fff;
 	}
 
+    ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
 </style>
+
 
 <ul>
     <li><a href="index.html">Home</a></li>
