ba baba ba ba ba ba ba

--- a/gpuinfolmfao/nvidia.html
+++ b/gpuinfolmfao/nvidia.html
@@ -98,4 +98,20 @@ li.dropdown {
     </li>
 </ul>
 
-<p>theres nothing here at the moment</p>
+<h1>games that shouldnt run on a gt 1030 that do</h1>
+<br>
+<p>i completed all of doom eternal and its expansions (the ancient gods part 1 and 2) on a nvidia geforce gt 1030 2gb.</p>
+<br>
+<br>
+<p>this gpu is WAY bellow the minimum requirments</p>
+<br>
+<pre>
+    OS: 64-bit Windows 7.
+    CPU: 3.1GHz AMD Ryzen 3 or 3.3GHz Intel Core i5.
+    GPU: AMD Radeon R9 280 (3GB)/Radeon R9 290 (4GB)/Radeon RX 470 (4GB) or Nvidia GeForce GTX 1050Ti (4GB)/GTX 1060 (3GB)/GTX 1650 (4GB)
+    RAM: 8GB.
+    Available Storage Space: 50GB.
+    (1080p/60fps)(not really minimum)
+</pre>
+<br>
+<p>this just shows id softwares dedication to game optimisation as having a modern AAA title even RUN on 2gb vram is an accomplishment in 2022</p>
