--- a/gpuinfolmfao/nvidia.html
+++ b/gpuinfolmfao/nvidia.html
@@ -87,7 +87,7 @@ li.dropdown {
 
 
 <ul>
-    <li><a href="index.html">Home</a></li>
+    <li><a href="./index.html">Home</a></li>
     <li class="dropdown">
         <a href="javascript:void(0)" class="dropbtn">gpu info</a>
         <div class="dropdown-content">
